crates/vexor-compiler/tests/golden/error/input/match_missing_arrow.vx
val r = 100
val result = match r {
    // missing =>
    100 Circle(100)
}
export result
